// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkOrdersHistoryTable component when logged in as a contract manager should render properly 1`] = `
<DocumentFragment>
  <h2
    class="lbh-heading-h2"
  >
    Work orders history
  </h2>
  <table
    class="govuk-table lbh-table govuk-!-margin-top-5 work-orders-history-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row lbh-body"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Reference
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date raised
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Trade
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Status
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Description
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row govuk-table__row--clickable lbh-body-s"
        data-ref="10000012"
      >
        <td
          class="govuk-table__cell"
        >
          <a
            class="lbh-link"
            href="/work-orders/10000012"
          >
            10000012
          </a>
        </td>
        <td
          class="govuk-table__cell"
        >
          18 Jan 2021
          <div
            class="work-order-hours"
          >
            15:28
          </div>
        </td>
        <td
          class="govuk-table__cell"
        >
          DOOR ENTRY ENGINEER - DE
        </td>
        <td
          class="govuk-table__cell"
        >
          <span
            class="govuk-tag lbh-tag lbh-tag--status-in-progress"
          >
            In progress
          </span>
        </td>
        <td
          class="govuk-table__cell description"
        >
          <p
            class="truncate-description truncate-line-5"
          >
            This is an immediate repair description
          </p>
        </td>
      </tr>
      <tr
        class="govuk-table__row govuk-table__row--clickable lbh-body-s"
        data-ref="10000013"
      >
        <td
          class="govuk-table__cell"
        >
          <a
            class="lbh-link"
            href="/work-orders/10000013"
          >
            10000013
          </a>
        </td>
        <td
          class="govuk-table__cell"
        >
          23 Jan 2021
          <div
            class="work-order-hours"
          >
            16:28
          </div>
        </td>
        <td
          class="govuk-table__cell"
        >
          DOOR ENTRY ENGINEER - DE
        </td>
        <td
          class="govuk-table__cell"
        >
          <span
            class="govuk-tag lbh-tag lbh-tag--status-in-progress"
          >
            In progress
          </span>
        </td>
        <td
          class="govuk-table__cell description"
        >
          <p
            class="truncate-description truncate-line-5"
          >
            This is an urgent repair description
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`WorkOrdersHistoryTable component when logged in as a contractor should render properly 1`] = `
<DocumentFragment>
  <h2
    class="lbh-heading-h2"
  >
    Work orders history
  </h2>
  <table
    class="govuk-table lbh-table govuk-!-margin-top-5 work-orders-history-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row lbh-body"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date raised
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Trade
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Status
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Description
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row govuk-table__row--clickable lbh-body-s"
        data-ref="10000012"
      >
        <td
          class="govuk-table__cell"
        >
          18 Jan 2021
          <div
            class="work-order-hours"
          >
            15:28
          </div>
        </td>
        <td
          class="govuk-table__cell"
        >
          DOOR ENTRY ENGINEER - DE
        </td>
        <td
          class="govuk-table__cell"
        >
          <span
            class="govuk-tag lbh-tag lbh-tag--status-in-progress"
          >
            In progress
          </span>
        </td>
        <td
          class="govuk-table__cell description"
        >
          <p
            class="truncate-description truncate-line-5"
          >
            This is an immediate repair description
          </p>
        </td>
      </tr>
      <tr
        class="govuk-table__row govuk-table__row--clickable lbh-body-s"
        data-ref="10000013"
      >
        <td
          class="govuk-table__cell"
        >
          23 Jan 2021
          <div
            class="work-order-hours"
          >
            16:28
          </div>
        </td>
        <td
          class="govuk-table__cell"
        >
          DOOR ENTRY ENGINEER - DE
        </td>
        <td
          class="govuk-table__cell"
        >
          <span
            class="govuk-tag lbh-tag lbh-tag--status-in-progress"
          >
            In progress
          </span>
        </td>
        <td
          class="govuk-table__cell description"
        >
          <p
            class="truncate-description truncate-line-5"
          >
            This is an urgent repair description
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`WorkOrdersHistoryTable component when logged in as an agent should render properly 1`] = `
<DocumentFragment>
  <h2
    class="lbh-heading-h2"
  >
    Work orders history
  </h2>
  <table
    class="govuk-table lbh-table govuk-!-margin-top-5 work-orders-history-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row lbh-body"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Reference
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date raised
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Trade
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Status
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Description
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row govuk-table__row--clickable lbh-body-s"
        data-ref="10000012"
      >
        <td
          class="govuk-table__cell"
        >
          <a
            class="lbh-link"
            href="/work-orders/10000012"
          >
            10000012
          </a>
        </td>
        <td
          class="govuk-table__cell"
        >
          18 Jan 2021
          <div
            class="work-order-hours"
          >
            15:28
          </div>
        </td>
        <td
          class="govuk-table__cell"
        >
          DOOR ENTRY ENGINEER - DE
        </td>
        <td
          class="govuk-table__cell"
        >
          <span
            class="govuk-tag lbh-tag lbh-tag--status-in-progress"
          >
            In progress
          </span>
        </td>
        <td
          class="govuk-table__cell description"
        >
          <p
            class="truncate-description truncate-line-5"
          >
            This is an immediate repair description
          </p>
        </td>
      </tr>
      <tr
        class="govuk-table__row govuk-table__row--clickable lbh-body-s"
        data-ref="10000013"
      >
        <td
          class="govuk-table__cell"
        >
          <a
            class="lbh-link"
            href="/work-orders/10000013"
          >
            10000013
          </a>
        </td>
        <td
          class="govuk-table__cell"
        >
          23 Jan 2021
          <div
            class="work-order-hours"
          >
            16:28
          </div>
        </td>
        <td
          class="govuk-table__cell"
        >
          DOOR ENTRY ENGINEER - DE
        </td>
        <td
          class="govuk-table__cell"
        >
          <span
            class="govuk-tag lbh-tag lbh-tag--status-in-progress"
          >
            In progress
          </span>
        </td>
        <td
          class="govuk-table__cell description"
        >
          <p
            class="truncate-description truncate-line-5"
          >
            This is an urgent repair description
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`WorkOrdersHistoryTable component when logged in as an authorisation manager should render properly 1`] = `
<DocumentFragment>
  <h2
    class="lbh-heading-h2"
  >
    Work orders history
  </h2>
  <table
    class="govuk-table lbh-table govuk-!-margin-top-5 work-orders-history-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row lbh-body"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Reference
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Date raised
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Trade
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Status
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Description
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row govuk-table__row--clickable lbh-body-s"
        data-ref="10000012"
      >
        <td
          class="govuk-table__cell"
        >
          <a
            class="lbh-link"
            href="/work-orders/10000012"
          >
            10000012
          </a>
        </td>
        <td
          class="govuk-table__cell"
        >
          18 Jan 2021
          <div
            class="work-order-hours"
          >
            15:28
          </div>
        </td>
        <td
          class="govuk-table__cell"
        >
          DOOR ENTRY ENGINEER - DE
        </td>
        <td
          class="govuk-table__cell"
        >
          <span
            class="govuk-tag lbh-tag lbh-tag--status-in-progress"
          >
            In progress
          </span>
        </td>
        <td
          class="govuk-table__cell description"
        >
          <p
            class="truncate-description truncate-line-5"
          >
            This is an immediate repair description
          </p>
        </td>
      </tr>
      <tr
        class="govuk-table__row govuk-table__row--clickable lbh-body-s"
        data-ref="10000013"
      >
        <td
          class="govuk-table__cell"
        >
          <a
            class="lbh-link"
            href="/work-orders/10000013"
          >
            10000013
          </a>
        </td>
        <td
          class="govuk-table__cell"
        >
          23 Jan 2021
          <div
            class="work-order-hours"
          >
            16:28
          </div>
        </td>
        <td
          class="govuk-table__cell"
        >
          DOOR ENTRY ENGINEER - DE
        </td>
        <td
          class="govuk-table__cell"
        >
          <span
            class="govuk-tag lbh-tag lbh-tag--status-in-progress"
          >
            In progress
          </span>
        </td>
        <td
          class="govuk-table__cell description"
        >
          <p
            class="truncate-description truncate-line-5"
          >
            This is an urgent repair description
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
